<resources>
    <string name="app_name">Dr\'s Care</string>
    <string name="get_started">Get Started</string>
    <string name="acc_type">Choose Account Type</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="below_login">Don’t Have an Account?</string>
    <string name="sign_up_act">Sign up</string>
    <string name="otp_enter">Enter the OTP</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="score_results_is">Score</string>
    <string name="overall">Score</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_v">Phone Verification</string>
    <string name="context_otp">Please enter the your Mobile Number!</string>
    <string name="button_verify">Verify</string>
    <string name="otp_timer">Phone Verification</string>
    <string name="dont_get_otp">Didn\'t get otp?</string>
    <string name="resend">Resend</string>
    <string name="phone_number">Phone Number</string>
    <string name="list_patients">List Of Patients</string>
    <string name="search_list_patients">Search with Patient No or Doctor Name</string>
    <string name="search_bar">Search</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_history">Patient History</string>
    <string name="test_results">Test Results</string>
    <string name="by_confirmed_this_action_the_appointment_will_get_cancelled">By Confirmed This Action The Appointment will get Cancelled</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="no">No</string>
    <string name="choose_working_days">Choose Your Working Days</string>
    <string name="d_no_of_days">Select the Days You can Work This Week</string>
    <string name="yes">Yes</string>
    <string name="notifications">Notifications</string>
    <string name="ram">Ram</string>
    <string name="choose_your_account_type">Choose Your Account Type</string>
    <string name="save_and_exit">Save &amp; Exit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="appointment_on">Appointment On :</string>
    <string name="today">Today</string>
    <string name="_01">01</string>
    <string name="timing">Timing :</string>
    <string name="_10_am">10 AM</string>
    <string name="preview">preview</string>
    <string name="cancel">Cancel</string>
    <string name="patient_no">Patient No</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="x">x</string>
    <string name="name">Name</string>
    <string name="email">E mail</string>
    <string name="profile">Profile</string>
    <string name="profilepic">Profile Picture</string>
    <string name="appointment_confirmed">Appointment Confirmed</string>
    <string name="no_patient_history_has_been_found">No Patient History Has been Found</string>
    <string name="details">Details</string>
    <string name="chickenpox">Chicken Pox</string>
    <string name="past_medical_history">Past Medical History</string>
    <string name="anemia">Anemia</string>
    <string name="asthma">Asthma</string>
    <string name="bronchitis">Bronchitis</string>
    <string name="developed_by_rohit">developed by rohit</string>
    <string name="personal_details">Personal Details</string>
    <string name="gethelp">GetHelp</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="add_patient">Add patient</string>
    <string name="generate">Generate</string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
    <string name="assessment_of_patients">Assessment of patients</string>
    <string name="score">Score</string>
    <string name="patient_s_score">Patient\'s Score</string>
    <string name="total_score">Total Score</string>
    <string name="scale_based_on_score">Scale Based on Score</string>
    <string name="outcome">Outcome</string>
    <string name="list_of_doctors">List of Doctors</string>
    <string name="search_by_doctor_name_or_area">Search by doctor name or Area</string>
    <string name="search">Search</string>
    <string name="maritial_status">Maritial Status</string>
    <string name="yes_or_no">Yes or No</string>
    <string name="enter_the_disease_name">Enter the disease name</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="about_the_doctor">About the Doctor</string>
    <string name="qualification">Qualification</string>
    <string name="location">Location</string>
    <string name="education">Education</string>
    <string name="reviews">Reviews</string>
    <string name="about_appendicitis">About Appendicitis</string>
    <string name="what_is_appendicitis">What is Appendicitis?</string>
    <string name="appendicitis_is_an_inflammation_of_the_appendix_a_small_pouch_like_structure_attached_to_the_colon_on_the_lower_right_side_of_the_abdomen_the_exact_function_of_the_appendix_is_not_well_understood_and_its_removal_does_not_appear_to_affect_a_person_s_health">Appendicitis is an inflammation of the appendix, a small pouch-like structure attached to the colon on the lower right side of the abdomen. The exact function of the appendix is not well understood, and its removal does not appear to affect a person\'s health.</string>
    <string name="symptoms_of_appendicitis">Symptoms of Appendicitis</string>
    <string name="what_are_the_risk_factors_of_appendicitis">What Are the Risk Factors of Appendicitis?</string>
    <string name="risk_factors_of_appendicitis">Appendicitis is one of the most common conditions across the globe. While anybody can get this disease anytime, appendicitis is rare in children below two years. Most cases are seen in individuals between 10 and 30 years. Some of the common complications and risk factors of appendicitis are discussed in the following points.</string>
    <string name="what_are_the_treatment_options_for_appendicitis">What Are the Treatment Options for Appendicitis?</string>
    <string name="score_values"><![CDATA[>22 = (High Risk) (Needs Immediate Intervention)
    16 - 22 = (Moderate Risk)
    10 -16 = (Low Risk)
    <10 = unlikely]]></string>
    <string name="gender">Gender</string>
    <string name="p_gender">Gender</string>
    <string name="patient_id">Patient Id</string>
    <string name="content">Content</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="more_than_40_years">More than 40 Years</string>
    <string name="less_than_40_years">Less Than 40 Years</string>
    <string name="symptoms">Symptoms</string>
    <string name="anorexia">Anorexia</string>
    <string name="rif_pain">RIF Pain</string>
    <string name="migratory_pain">Migratory Pain</string>
    <string name="nausea_vomiting">Nausea/Vomiting</string>
    <string name="less_than_24_hours">Less Than 24 Hours</string>
    <string name="more_than_24_hours">More Than 24 Hours</string>
    <string name="fever">Fever</string>
    <string name="_37c_or_39c"><![CDATA[(>37C Or <39C)]]></string>
    <string name="signs">Signs</string>
    <string name="melbourney_tenderness">Mcburney\'s Tenderness</string>
    <string name="prebound_tenderness">Rebound Tenderness</string>
    <string name="gaurding">Gaurding</string>
    <string name="rovsing_sign">Rovsing Sign</string>
    <string name="leucoytosis">Leucoytosis</string>
    <string name="more_than_10000">(more than 10000)</string>
    <string name="radiological_investigation_optional_clicking">Radiological Investigation</string>
    <string name="usg_probe_tenderness">USG Probe Tenderness</string>
    <string name="presence_of_appendicolith">Presence of Appendicolith</string>
    <string name="diameter_of_appendix">Diameter of Appendix</string>
    <string name="_2_significant"><![CDATA[(More than 7mm)]]></string>
    <string name="calculate">Calculate</string>
    <string name="with_radiological_investigation">With Radiological Investigation</string>
    <string name="above_22">More than or Equal To 22</string>
    <string name="_16_to_21">16 to 21</string>
    <string name="_10_to_15">10 to 15</string>
    <string name="below_10">Below 10</string>
    <string name="_20">20</string>
    <string name="acute_appendicitis_high_risk">Acute appendicitis (High Risk)</string>
    <string name="high_probability_moderate_risk">High probability (Moderate Risk)</string>
    <string name="low_probability_low_risk">Low probability (Low Risk)</string>
    <string name="without_radiological_investigation">Without Radiological Investigation</string>
    <string name="above_19">More Than or Equal To 19</string>
    <string name="_14_to_19">14 to 18</string>
    <string name="_9_to_13">9 to 13</string>
    <string name="below_9">Below 9</string>
    <string name="_26">26</string>
    <string name="unlikely">Unlikely</string>
    <string name="need_for_immediate_intervention">Need for Immediate Intervention</string>
    <string name="back_to_patient_data">Back To Patient Data</string>
    <string name="conservative_management">Conservative Management</string>
    <string name="laparoscopic_appendectomy">Laparoscopic appendectomy</string>
    <string name="open_appendectomy">Open appendectomy</string>
    <string name="iv_fluids_and_antibiotics">IV Fluids and Antibiotics</string>
    <string name="patient_data">Patient Data</string>
    <string name="select_from_device">Select From Device</string>
    <string name="remove_current_photo">Remove Current Photo</string>
    <string name="by_clicking_yes_the_patient_information_will_be_deleted">By clicking yes the patient information will be deleted.</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="available_timing">Available Timing :</string>
    <string name="get_help">Get Help</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_results">Score Results</string>
    <string name="view_default_score">View Default Score</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="specification">(Specification)</string>
    <string name="experience">Experience:</string>
    <string name="list_of_doctors_available">list of doctors available</string>
    <string name="patientdetailsbutton">patientdetailsbutton</string>
    <string name="accessed_by">Accessed by</string>
    <string name="save">Save</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_mobile_number">Patient Mobile Number</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_email">Patient Email</string>
    <string name="_30">30</string>
</resources>