<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient_details2">

    <View
        android:id="@+id/view21"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/my_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:background="@color/transparent"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view21" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/patient_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view21"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/view21" />

    <View
        android:id="@+id/view22"
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view21" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view22" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/patient_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/patient_age"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        android:autofillHints=""
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/patient_email"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/mobile_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/patient_mobile_number"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/past_medical_history"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText8" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_the_disease_name"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

</androidx.constraintlayout.widget.ConstraintLayout>
