<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_score">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/my_primary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/my_primary"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/imageButton12"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/with_radiological_investigation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView106" />

    <View
        android:id="@+id/view39"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:background="@color/inside_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView107" />

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_score"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view39"
        app:layout_constraintTop_toTopOf="@+id/view39" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/above_22"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView108" />

    <!-- Add the rest of your layout here -->


    <TextView
        android:id="@+id/textView110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_16_to_21"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView109" />

    <TextView
        android:id="@+id/textView111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_10_to_15"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView110" />

    <TextView
        android:id="@+id/textView112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/below_10"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView111" />

    <TextView
        android:id="@+id/textView113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_30"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/view39"
        app:layout_constraintTop_toTopOf="@+id/view39" />

    <TextView
        android:id="@+id/textView114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/acute_appendicitis_high_risk"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView113" />

    <TextView
        android:id="@+id/textView115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/high_probability_moderate_risk"
        app:layout_constraintEnd_toEndOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView114" />

    <TextView
        android:id="@+id/textView116"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/low_probability_low_risk"
        app:layout_constraintEnd_toEndOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView115" />

    <TextView
        android:id="@+id/textView117"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/unlikely"
        app:layout_constraintEnd_toEndOf="@+id/view39"
        app:layout_constraintTop_toBottomOf="@+id/textView116" />

    <TextView
        android:id="@+id/textView118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/without_radiological_investigation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view39" />

    <View
        android:id="@+id/view40"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:background="@color/inside_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <TextView
        android:id="@+id/textView119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/total_score"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view40"
        app:layout_constraintTop_toTopOf="@+id/view40" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/above_19"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView119" />

    <TextView
        android:id="@+id/textView121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_14_to_19"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView120" />

    <TextView
        android:id="@+id/textView122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_9_to_13"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/below_9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView122" />

    <TextView
        android:id="@+id/textView124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_26"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/view40"
        app:layout_constraintTop_toTopOf="@+id/view40" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:text="@string/acute_appendicitis_high_risk"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView124" />

    <TextView
        android:id="@+id/textView126"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/high_probability_moderate_risk"
        app:layout_constraintEnd_toEndOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView125" />

    <TextView
        android:id="@+id/textView127"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/low_probability_low_risk"
        app:layout_constraintEnd_toEndOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView126" />

    <TextView
        android:id="@+id/textView128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/unlikely"
        app:layout_constraintEnd_toEndOf="@+id/view40"
        app:layout_constraintTop_toBottomOf="@+id/textView127" />


</androidx.constraintlayout.widget.ConstraintLayout>