<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/textView154"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/are_you_sure"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView155"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/by_clicking_yes_the_patient_information_will_be_deleted"
        android:textSize="18sp"
        android:layout_below="@+id/textView154"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/yes"
        android:textColor="#00838F"
        android:textSize="18sp"
        android:layout_below="@+id/textView155"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/no"
        android:textColor="#212121"
        android:textSize="18sp"
        android:layout_below="@+id/textView155"
        android:layout_alignParentStart="true" />

</RelativeLayout>
