<!-- res/layout/nav_header.xml -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="190dp"
    android:layout_height="700dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Trying_page_Activity">

    <!-- Image View for Logo or User Image -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp" />

    <!-- Button: About Us -->
    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:layout_marginTop="60dp"
        app:layout_anchorGravity="bottom" />

    <!-- Button: Get Help -->
    <Button
        android:id="@+id/btnGetHelp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/get_help"
        android:layout_marginTop="120dp"
        app:layout_anchorGravity="bottom" />

    <!-- Button: Logout -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="180dp"
        app:layout_anchorGravity="bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
